--- a/NHK2024_mbd_R2VacuumFan.ioc
+++ b/NHK2024_mbd_R2VacuumFan.ioc
@@ -20,16 +20,16 @@ Mcu.IP0=FDCAN1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM2
+Mcu.IP4=TIM3
 Mcu.IP5=TIM17
 Mcu.IP6=USART2
 Mcu.IPNb=7
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PA1
-Mcu.Pin1=PA2
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
 Mcu.Pin10=VP_TIM17_VS_ClockSourceINT
-Mcu.Pin2=PA3
+Mcu.Pin2=PA4
 Mcu.Pin3=PA11
 Mcu.Pin4=PA12
 Mcu.Pin5=PA13
@@ -56,10 +56,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA1.Locked=true
-PA1.Signal=S_TIM2_CH2
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
@@ -84,6 +81,8 @@ PA3.GPIO_Label=USART2_RX [ST-LINKV3E_VCP_TX]
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Locked=true
+PA4.Signal=S_TIM3_CH2
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
@@ -123,7 +122,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM17_Init-TIM17-false-HAL-true,6-MX_FDCAN1_Init-FDCAN1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM17_Init-TIM17-false-HAL-true,6-MX_FDCAN1_Init-FDCAN1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADC12Freq_Value=80000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -167,15 +166,15 @@ RCC.USART3Freq_Value=170000000
 RCC.USBFreq_Value=80000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
-SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
-SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
 TIM17.IPParameters=Prescaler,PeriodNoDither
 TIM17.PeriodNoDither=1999
 TIM17.Prescaler=39999
-TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,PeriodNoDither
-TIM2.PeriodNoDither=19999
-TIM2.Prescaler=79
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,PeriodNoDither
+TIM3.PeriodNoDither=19999
+TIM3.Prescaler=79
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
