pwm出力をPA15からに変更 回路の問題をクリア

--- a/NHK2024_mbd_R2VacuumFan.ioc
+++ b/NHK2024_mbd_R2VacuumFan.ioc
@@ -29,7 +29,7 @@ Mcu.Package=LQFP32
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
 Mcu.Pin10=VP_TIM17_VS_ClockSourceINT
-Mcu.Pin2=PA4
+Mcu.Pin2=PA7
 Mcu.Pin3=PA11
 Mcu.Pin4=PA12
 Mcu.Pin5=PA13
@@ -81,8 +81,8 @@ PA3.GPIO_Label=USART2_RX [ST-LINKV3E_VCP_TX]
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Locked=true
-PA4.Signal=S_TIM3_CH2
+PA7.Locked=true
+PA7.Signal=S_TIM3_CH2
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
@@ -122,7 +122,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM17_Init-TIM17-false-HAL-true,6-MX_FDCAN1_Init-FDCAN1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADC12Freq_Value=80000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
