--- a/NHK2024_mbd_R2VacuumFan.ioc
+++ b/NHK2024_mbd_R2VacuumFan.ioc
@@ -8,10 +8,12 @@ FDCAN1.CalculateTimeQuantumNominal=50.0
 FDCAN1.DataPrescaler=2
 FDCAN1.DataTimeSeg1=15
 FDCAN1.DataTimeSeg2=4
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,DataPrescaler,DataTimeSeg1,DataTimeSeg2
+FDCAN1.FrameFormat=FDCAN_FRAME_FD_BRS
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,DataPrescaler,DataTimeSeg1,DataTimeSeg2,FrameFormat,StdFiltersNbr
 FDCAN1.NominalPrescaler=4
 FDCAN1.NominalTimeSeg1=15
 FDCAN1.NominalTimeSeg2=4
+FDCAN1.StdFiltersNbr=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32G431KBT6
@@ -45,8 +47,8 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN1_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN1_IT0_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.FDCAN1_IT1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
