--- a/NHK2024_mbd_R2VacuumFan.ioc
+++ b/NHK2024_mbd_R2VacuumFan.ioc
@@ -1,4 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC2.CommonPathInternal=null|null|null|null
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SingleDiff-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -18,28 +26,32 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32G431KBT6
 Mcu.Family=STM32G4
-Mcu.IP0=FDCAN1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM3
-Mcu.IP5=TIM17
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP0=ADC2
+Mcu.IP1=FDCAN1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=TIM17
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin10=VP_TIM17_VS_ClockSourceINT
-Mcu.Pin2=PA7
-Mcu.Pin3=PA11
-Mcu.Pin4=PA12
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB3
-Mcu.Pin8=PB8-BOOT0
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin0=PA1
+Mcu.Pin1=PA2
+Mcu.Pin10=PB3
+Mcu.Pin11=PB8-BOOT0
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin2=PA3
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PA10
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431KBTx
@@ -59,6 +71,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.Locked=true
+PA1.Signal=S_TIM2_CH2
+PA10.Locked=true
+PA10.Signal=S_TIM2_CH4
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
@@ -83,8 +99,12 @@ PA3.GPIO_Label=USART2_RX [ST-LINKV3E_VCP_TX]
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA6.Locked=true
+PA6.Mode=IN3-Differential
+PA6.Signal=ADC2_IN3
 PA7.Locked=true
-PA7.Signal=S_TIM3_CH2
+PA7.Mode=IN3-Differential
+PA7.Signal=ADC2_IN4
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
 PB3.Locked=true
@@ -168,15 +188,18 @@ RCC.USART3Freq_Value=170000000
 RCC.USBFreq_Value=80000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
-SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
-SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
 TIM17.IPParameters=Prescaler,PeriodNoDither
 TIM17.PeriodNoDither=1999
 TIM17.Prescaler=39999
-TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,PeriodNoDither
-TIM3.PeriodNoDither=19999
-TIM3.Prescaler=79
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Prescaler,PeriodNoDither
+TIM2.PeriodNoDither=19999
+TIM2.Prescaler=79
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
