--- a/NHK2024_mbd_R2VacuumFan.ioc
+++ b/NHK2024_mbd_R2VacuumFan.ioc
@@ -1,12 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC2.CommonPathInternal=null|null|null|null
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SingleDiff-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
 ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC2.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
+ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-1\#ChannelRegularConversion=1
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -32,25 +31,26 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
-Mcu.IP6=TIM17
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP6=TIM6
+Mcu.IP7=TIM17
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=PB3
-Mcu.Pin11=PB8-BOOT0
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=PB8-BOOT0
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin13=VP_TIM17_VS_ClockSourceINT
 Mcu.Pin2=PA3
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
-Mcu.Pin5=PA10
-Mcu.Pin6=PA11
-Mcu.Pin7=PA12
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
+Mcu.Pin3=PA7
+Mcu.Pin4=PA10
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
 Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -70,6 +70,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Locked=true
 PA1.Signal=S_TIM2_CH2
@@ -99,11 +100,8 @@ PA3.GPIO_Label=USART2_RX [ST-LINKV3E_VCP_TX]
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA6.Locked=true
-PA6.Mode=IN3-Differential
-PA6.Signal=ADC2_IN3
 PA7.Locked=true
-PA7.Mode=IN3-Differential
+PA7.Mode=IN4-Single-Ended
 PA7.Signal=ADC2_IN4
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=T_SWO
@@ -144,7 +142,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM17_Init-TIM17-false-HAL-true,5-MX_FDCAN1_Init-FDCAN1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=80000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -200,6 +198,9 @@ TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Prescaler,PeriodNoDither
 TIM2.PeriodNoDither=19999
 TIM2.Prescaler=79
+TIM6.IPParameters=Prescaler,PeriodNoDither
+TIM6.PeriodNoDither=999
+TIM6.Prescaler=79
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
@@ -207,6 +208,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-G431KB
 boardIOC=true
 isbadioc=false
